tests/regression/errors/basic/type_error_12.csd
// Type error test 12
sus number drip = 12
sus text tea = "string_12"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 12:", wrong)
